<resources>
    <string name="app_name">Stock Idea Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="list_of_stock_ideas">List of Stock Ideas</string>
    <string name="portfolio_summary">Portfolio Summary</string>
    <string name="add_new_stock_idea">Add New Stock Idea</string>
    <string name="stock_idea_title_label">Name of Stock: </string>
    <string name="stock_idea_title">Texas Title</string>
    <string name="stock_idea_ticker_label">Stock Symbol: </string>
    <string name="stock_idea_ticker">TTT</string>
    <string name="stock_idea_creation_date_label">Date Stock Idea Added: </string>
    <string name="stock_idea_creation_date">11/11/2016</string>
    <string name="stock_idea_coordinates_label">GPS Coordinates: </string>
    <string name="stock_idea_coordinates">534234, 234234</string>
    <string name="stock_idea_description">As sales of property has increased in Texas, title companies should have an inrease in sales.</string>
    <string name="stock_idea_purchase_price_label">Purchase Price of the stock: </string>
    <string name="stock_idea_purchase_price">$12.45</string>
    <string name="stock_idea_number_of_stock_purchased_label">Number of Stock Purchase: </string>
    <string name="stock_idea_number_of_stock_purchased">35</string>
    <string name="stock_idea_total_purchase_price_label">Total cost of stocks: </string>
    <string name="stock_idea_total_purchase_price">$1245.34</string>
    <string name="stock_idea_current_price_label">Current Stock Price: </string>
    <string name="stock_idea_current_price">$23.34</string>
    <string name="stock_idea_total_current_value_label">Current Total Value: </string>
    <string name="stock_idea_total_current_value">$2223.45</string>
    <string name="stock_purchase_button">Purchase this stock</string>
    <string name="bad_input">Could not purchase stock. Number of stock entered must be a positive integer.</string>
    <string name="stock_idea_description_label">Stock Idea: </string>
    <string name="save_idea_button">Save Stock Idea</string>
    <string name="stock_purchase_date_label">Date Stock Purchased: </string>
    <string name="stock_purchase_date">12/11/2016</string>
    <string name="validate_symbol_button">Validates Stock Symbol</string>
    <string name="profit_loss">yup</string>
    <string name="summary_report_label">Summary Report</string>
    <string name="total_cost_of_all_stocks_label">Total Cost of All Stocks : $</string>
    <string name="total_cost_of_all_stocks">12.45</string>
    <string name="total_value_of_all_stocks_label">Total Value of All Stock : $</string>
    <string name="total_value_of_all_stocks">30.12</string>
    <string name="total_profit_loss_of_all_stocks_label">Total Profit/Loss of the stocks</string>
    <string name="sort_by_ticker">Sort by Ticker Symbol</string>
    <string name="sort_by_name">Sort by Name</string>
    <string name="sort_by_date">Sort by Date</string>
    <string name="sort_by_gps">Sort by GPS</string>
    <string name="stock_delete_button">Delete this stock</string>
    <string name="stock_delete_confirm_button">Confirm Deletion of this stock idea.</string>
    <string name="stock_cancel_button">Cancel Deletion of this stock idea</string>
    <string name="stock_sell_button">Sell the Stocks</string>
    <string name="stock_sell_confirm_button">Confirm Selling the Stocks</string>
    <string name="stock_sell_cancel_button">Cancel Selling the Stocks</string>
    <string name="stock_sold_date_label">Date stock was sold: </string>
    <string name="stock_sold_date"></string>
</resources>
