<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:padding="2dp"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:id="@+id/summary_report_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/summary_report_label"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="4dp">

        <TextView
            android:id="@+id/total_cost_of_all_stocks_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_cost_of_all_stocks_label"/>

        <TextView
            android:id="@+id/total_cost_of_all_stocks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_cost_of_all_stocks"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/total_value_of_all_stocks_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_value_of_all_stocks_label"/>

        <TextView
            android:id="@+id/total_value_of_all_stocks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_value_of_all_stocks"/>

    </LinearLayout>

    <TextView
        android:id="@+id/total_profit_loss_of_all_stocks_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_profit_loss_of_all_stocks_label"/>

</LinearLayout>